--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,5 @@
 version: appveyor-{build}
-image: Visual Studio 2017
+image: Visual Studio 2019
 shallow_clone: true
 environment:
   DRNSF_S3DEPLOY_ACCESSKEY_ID:
@@ -13,8 +13,8 @@ platform:
   - x86
   - x64
 before_build:
-  - if %PLATFORM%==x86 (set cmake_opts= -G"Visual Studio 15 2017")
-  - if %PLATFORM%==x64 (set cmake_opts= -G"Visual Studio 15 2017 Win64")
+  - if %PLATFORM%==x86 (set cmake_opts= -G"Visual Studio 16 2019" -A Win32)
+  - if %PLATFORM%==x64 (set cmake_opts= -G"Visual Studio 16 2019" -A x64)
   - set cmake_opts=%cmake_opts% -DAUTOMATIC_DEPS=ON
   - set cmake_opts=%cmake_opts% -DSTATIC_MSVC_RUNTIME=ON
   - mkdir build
@@ -22,7 +22,6 @@ before_build:
   - cmake .. %cmake_opts%
 build_script:
   - cmake --build . --config %CONFIGURATION%
-  - '%CONFIGURATION%\drnsf ":internal-test"'
 after_build:
   - mkdir pkg
   - copy .\%CONFIGURATION%\drnsf.exe pkg
@@ -48,9 +47,12 @@ after_build:
   - copy ..\extra\autodep_licenses\pixman.txt pkg\lib_licenses\pixman.txt
   - copy ..\extra\autodep_licenses\libpng.txt pkg\lib_licenses\libpng.txt
   - copy ..\extra\autodep_licenses\zlib.txt pkg\lib_licenses\zlib.txt
+  - if %CONFIGURATION%==Debug (copy .\%CONFIGURATION%\drnsf.pdb pkg)
   - 7z a drnsf.zip .\pkg\*
   - move drnsf.zip ..\drnsf-%APPVEYOR_BUILD_NUMBER%-%APPVEYOR_REPO_COMMIT%-%PLATFORM%-%CONFIGURATION%.zip
-test: off
+  - cd ..
+test_script:
+  - 'build\%CONFIGURATION%\drnsf ":internal-test"'
 artifacts:
   - path: drnsf-$(APPVEYOR_BUILD_NUMBER)-$(APPVEYOR_REPO_COMMIT)-$(PLATFORM)-$(CONFIGURATION).zip
     name: DRNSF-FULLZIP
@@ -66,3 +68,6 @@ deploy:
     on:
       branch: master
       configuration: Release
+on_failure:
+  - move drnsf-%APPVEYOR_BUILD_NUMBER%-%APPVEYOR_REPO_COMMIT%-%PLATFORM%-%CONFIGURATION%.zip drnsf-FAILED-%APPVEYOR_BUILD_NUMBER%-%APPVEYOR_REPO_COMMIT%-%PLATFORM%-%CONFIGURATION%.zip
+  - appveyor PushArtifact drnsf-FAILED-%APPVEYOR_BUILD_NUMBER%-%APPVEYOR_REPO_COMMIT%-%PLATFORM%-%CONFIGURATION%.zip
